--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>Lod</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css"> 
+		<link rel="stylesheet" type="text/css" href="../css/style.css"> 
         <link rel="icon" type="image/x-icon" href="favicon.ico">
 	</head>
 <!-- Body -->
@@ -34,7 +34,7 @@
               </div>
 
 <!-- JS -->
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 <!-- JS -->
     </body>
     <!-- Body -->
