--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <html>
 	<head>
 		<title>Lod</title>
-		<link rel="stylesheet" type="text/css" href="../css/style.css"> 
+		<link rel="stylesheet" type="text/css" href="../css/style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
 	</head>
 <!-- Body -->
