--- a/confirmed.html
+++ b/confirmed.html
@@ -15,7 +15,7 @@
                          your subscription was confirmed
               
               <div class="flooter">
-                <center><p style="font-size: 14px;" class="flooter-text" onclick="openLink('https://localhost/projeto/projeto')">return here</a></p><br><br>
+                <center><p style="font-size: 14px;" class="flooter-text" onclick="openLink('https://lod.quest')">return here</a></p><br><br>
                 </center>
               </div>
 
