--- a/thanks.html
+++ b/thanks.html
@@ -16,7 +16,7 @@
 </svg>             
               
               <div class="flooter">
-                <center><p style="font-size: 14px;" class="flooter-text" onclick="openLink('https://localhost/projeto/projeto')">return here</a></p><br><br>
+                <center><p style="font-size: 14px;" class="flooter-text" onclick="openLink('https://lod.quest')">return here</a></p><br><br>
                 </center>
               </div>
 
