--- a/thanks.html
+++ b/thanks.html
@@ -12,8 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 <!-- Body -->
-                         thanks for signing up on our newsletter
-</svg>             
+    <p style="font-family:'Neue Haas Display Bold','sans-serif'; font-size:17px;">Thanks for signing up on our newsletter.</a></p>             
               
               <div class="flooter">
                 <center><p style="font-size: 14px;" class="flooter-text" onclick="openLink('https://lod.quest')">return here</a></p><br><br>
