--- a/confirmed.html
+++ b/confirmed.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 <!-- Body -->
-                         your subscription was confirmed
+<p style="font-family:'Neue Haas Display Bold','sans-serif'; font-size:17px;">Your subscription was confirmed.</a></p>
               
               <div class="flooter">
                 <center><p style="font-size: 14px;" class="flooter-text" onclick="openLink('https://lod.quest')">return here</a></p><br><br>
