--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
                          <p style="font-family:'Neue Haas Display Bold','sans-serif'; font-size:17px;"> Oops! We've found an error to access this page.</a></p>        
               
               <div class="flooter">
-                <center><p style="font-size: 14px;" class="flooter-text" onclick="openLink('https://localhost/teste/index.html')">return here</a></p><br><br>
+                <center><p style="font-size: 14px;" class="flooter-text" onclick="openLink('https://lod.quest')">return here</a></p><br><br>
                 </center>
               </div>
 
