--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 		<title>Lod</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css"> 
         <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="favicon.ico">
+	<link rel="apple-touch-icon" href="device.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:title" content="Lod"/>
+	<meta name=description content="Is unrollin' soon">
+	<meta name=author content="Lod">
         <meta property="og:url" content="http://lod.quest/"/>
         <meta property="og:image" content="device.png"/>
         <meta property="og:description" content=""/>
