--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<meta name=author content="Lod">
         <meta property="og:url" content="http://lod.quest/"/>
         <meta property="og:image" content="device.png"/>
-        <meta property="og:description" content=""/>
+        <meta property="og:description" content="Is unrollin' soon"/>
         <meta property="og:site_name" content="Lod">
 
 	</head>
