--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Lod</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css"> 
         <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="favicon.ico">
-	<link rel="apple-touch-icon" href="device.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:title" content="Lod"/>
 	<meta name=description content="Is unrollin' soon">
